--- a/ProjetoXan/AgendaContatos/AgendaContatos/AgendaContatos.csproj
+++ b/ProjetoXan/AgendaContatos/AgendaContatos/AgendaContatos.csproj
@@ -35,6 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Agenda.cs" />
     <Compile Include="App.cs" />
     <Compile Include="MainPage.cs" />
     <Compile Include="Models\Contato.cs" />
